--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-maskedinput": "^4.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-maskedinput": "^4.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
